优化一下使用时的逻辑